# plan9port

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CODING_STANDARDS.md  CONTRIBUTING.md  INSTALL  README.md  install.txt  meson.build  setup.sh
.codex/: setup.sh
.github/workflows/: actions.yaml  codeql-analysis.yml  reviewdog.yml
docs/: MK_SYSTEM.md
include/: fcall.h  libc.h
lib/: AGENTS.md
man/: upasfs.1
src/: AGENTS.md  mkenv  mkfile
src/cmd/: c17hello.c  c23hello.c  echo.c  meson.build
src/cmd/9660/: boot.c  cdrdwr.c  conform.c  direc.c  dump.c  dump9660.c  ichar.c  iso9660.h  jchar.c  path.c  plan9.c  rune.c  sysuse.c  uid.c  unix.c  util.c  write.c
src/cmd/9660srv/: 9660srv.c  dat.h  data.c  fns.h  iobuf.c  main.c  xfile.c
src/cmd/9term/: 9term.c  dat.h  scrl.c  time.c  util.c  wind.c
src/cmd/acid/: acid.h
src/cmd/acme/mail/: readme
src/cmd/fossil/: 9.h  9p.c  9proc.c
src/cmd/grep/: main.c
src/cmd/lib9/: mkfile
src/cmd/lib9/test/: convtest.c  mkfile
src/cmd/upas/fs/: fs.c
src/lib9/: convS2M.c  ctime.c  meson.build  tm2sec.c  zoneinfo.c
src/lib9/fmt/: fmt.c
src/libmach/: macho.c  macho.h
tools/: list_mkfiles.py  mk2cmake.py
